<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/task"
            android:icon="@drawable/ic_task"
            android:title="@string/task"/>
        <item android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
</menu>